0027988: Visualization, AIS_InteractiveContext - fix inconsistent methods for setting highlight styles

Methods ::ChangeHighlightStyle() and ::ChangeSelectionStyle() have been
replaced by ::SetHighlightStyle() and ::SetSelectionStyle().